Fix group basis error with more context and add more testing. (#646)
* Notes on the bug.

* Fix group basis error with more context and add more testing.

* Sonar.

* More Sonar.

* More Sonar.